adding big_sort(broken)
SEGV

--- a/push _ swap/Makefile
+++ b/push _ swap/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: docentennm <docentennm@student.42.fr>      +#+  +:+       +#+         #
+#    By: maouzal <maouzal@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/02 07:19:51 by maouzal           #+#    #+#              #
-#    Updated: 2023/04/23 19:00:00 by docentennm       ###   ########.fr        #
+#    Updated: 2023/04/26 00:38:09 by maouzal          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ CFLAGS = -Wall -Wextra -Werror -fsanitize=address
 
 SRC = push_swap.c	parsing.c	utils.c	linked_list.c	operations_push.c	\
 	operations_rotat.c	operations_swap.c	operations_rev_rotat.c	small_sort.c	\
-	chunck_array.c	functions.c	ft_split.c
+	get_min.c	functions.c	ft_split.c	sort_assist.c	push_min_b.c
 
 OBJ = $(SRC:.c=.o)
 
