--- a/cpp01/.vscode/settings.json
+++ b/cpp01/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "files.associations": {
-        "iostream": "cpp",
-        "string": "cpp",
+        "new": "cpp",
         "ostream": "cpp"
     }
 }
