--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -1,25 +1,24 @@
-
-NAME = Zombie
+NAME = Weapon
 
 CXX = c++
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 
-SRC = main.cpp newZombie.cpp randomChump.cpp Zombie.cpp 
+SRC = main.cpp Weapon.cpp  HumanA.cpp HumanB.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
-all : $(NAME)
+all: $(NAME)
 
 $(NAME): $(OBJ)
 		$(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
-clean :
+clean:
 		@rm -f $(OBJ)
 
-fclean : clean
+fclean: clean
 		@rm -f $(NAME)
 
-re : fclean all
+re: fclean all
 
-.PHONY : all clean fclean re 
+.PHONY: all clean fclean re
