--- a/cpp01/.vscode/settings.json
+++ b/cpp01/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "new": "cpp",
         "ostream": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "iostream": "cpp"
     }
 }
