--- a/cpp01/ex05/Makefile
+++ b/cpp01/ex05/Makefile
@@ -2,7 +2,7 @@ NAME = Harl
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g3
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address -g3
 
 SRC = main.cpp Harl.cpp 
 
