--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -3,7 +3,7 @@ NAME = PhoneBook
 
 CXX = c++
 
-CXXFLAG = -Wall -Wextra -Werror -std=c++98
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRC = PhoneBook.cpp main.cpp 
 
@@ -12,7 +12,7 @@ OBJ = $(SRC:.cpp=.o)
 all: $(NAME)
 
 $(NAME): $(OBJ) 
-		 $(CXX) $(CXXFLAG) $(OBJ) -o $(NAME)
+		 $(CXX) $(CXXFLAGS) $(OBJ) -o $(NAME)
 
 clean:
 		@rm -f $(OBJ)
