--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -2,7 +2,7 @@ NAME = Weapon
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -g3 -fsanitize=address 
 
 SRC = main.cpp Weapon.cpp  HumanA.cpp HumanB.cpp
 
