--- a/cpp03/ex01/Makefile
+++ b/cpp03/ex01/Makefile
@@ -1,10 +1,10 @@
-NAME = Claptrap
+NAME = ScavTrap
 
 CXX = c++
 
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp ClapTrap.cpp
+SRC = main.cpp ClapTrap.cpp ScavTrap.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
