--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -3,7 +3,7 @@ NAME = Zombie
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRC = main.cpp zombieHorde.cpp Zombie.cpp 
 
