--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -2,7 +2,7 @@ NAME = BRAIN
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRC = main.cpp
 
