--- a/cpp01/ex06/Makefile
+++ b/cpp01/ex06/Makefile
@@ -2,7 +2,7 @@ NAME = HarlFilter
 
 CXX = c++
 
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fsanitize=address -g3
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
 SRC = main.cpp Harl.cpp 
 
